@@ -260,10 +260,6 @@
      	<!-- tests dependencies  -->
      	<get-element to-file="${libs.tests}/commons-el-1.0.jar" url="${central.url}/commons-el/commons-el/1.0/commons-el-1.0.jar" />
      	<get-element to-file="${libs.tests}/hsqldb-1.8.0.10.jar" url="${central.url}/org/hsqldb/hsqldb/1.8.0.10/hsqldb-1.8.0.10.jar" />
-        <get-element to-file="${libs.tests}/jasper-compiler-5.5.23.jar" 
-                     url="${central.url}/tomcat/jasper-compiler/5.5.23/jasper-compiler-5.5.23.jar" />
-        <get-element to-file="${libs.tests}/jasper-runtime-5.5.23.jar" 
-                     url="${central.url}/tomcat/jasper-runtime/5.5.23/jasper-runtime-5.5.23.jar" />
         <get-element to-file="${libs.tests}/jetty-all-7.6.7.v20120910.jar" 
                      url="${central.url}/org/eclipse/jetty/aggregate/jetty-all/7.6.7.v20120910/jetty-all-7.6.7.v20120910.jar" />
         <get-element to-file="${libs.tests}/junit-3.8.2.jar" url="${central.url}/junit/junit/3.8.2/junit-3.8.2.jar" />
@@ -1113,179 +1109,13 @@ If all of the tests ran successfully, the reports will all be "green."</echo>
         <arg line="-htmlSuite" />
         <arg line='"${webtests.browser}"' />
         <arg line='"http://localhost:${webtests.port}"' />
+        <!-- pre-filtered TestSuite.htmlin tests/etc/selenium/tests/all -->
         <arg line="${basedir}/${webtests.build}/@{context}/selenium/TestSuite.html" />
         <arg line="${webtests.reports}/@{context}.html" />
       </java>
     </sequential>
   </macrodef>
-
-  <!-- ============================================================== -->
-
-  <!-- Tomcat war pre-compilation -->
-
-  <!-- This target builds a WAR file that is specially pre-compiled
-       for use with Tomcat. By generating and pre-compiling JSPs
-       ahead of time (instead of having Tomcat do it on-the-fly
-       at runtime), we provide a slight runtime speed bump. In
-       addition, in security-conscious environments this means
-       that we can eliminate the need for the Jasper JSP compiler,
-       and can run Tomcat using just a JRE instead of a full JDK.
-
-       Pre-compilation involves three steps:
-       1) Generating the .java files that correspond to JSPWiki's JSPs.
-          The generated classes are actually servlets.
-       2) Compiling the .java files and creating a jar.file,
-          which is added to the WAR's WEB-INF/lib directory
-       3) Injecting servlet mappings into the WEB-INF/web.xml
-          file so that requests for the JSPs are mapped to the
-          servlets generated in step 1.
-
-       All of these steps are performed automatically by the
-       target "war-tomcat."
-
-       To use Tomcat pre-compilation, you need to specify
-       where Tomcat lives on your machine. This can be done
-       two ways:
-        1. Export the environment variable CATALINA_HOME, or:
-        2. Set the property "tomcat.home" in build.properties to
-           Tomcat's installation directory (e.g., /usr/local/tomcat)
-
-       NOTE: The Jasper compiler on older versions of Tomcat
-       (earlier than ~June 2004) is known to have bugs
-       that prevent the Ant "jasper2" task from running
-       successfully. So, you should probably try to use
-       a relatively recent build.
-
-       In addition to pre-compiling the servlets, "war-tomcat"
-       executes a sub-target that generates a tarball containing
-       all of JSPWiki's static content. This is quite handy for
-       environments that use Tomcat in conjunction with a front-end
-       web server such as Apache (via mod_jk/jk2 or mod_proxy).
-       The target strips out the static content (images, css, etc)
-       and adds it to a separate tar file that can be unpacked
-       in one of Apache's content directories.
-
-       To generate static content, set the properties
-       "static.user" and "static.group" in build.properties.
-       These should be set to the Unix runtime user and group
-       that should own the static files, for example the
-       user "apache" and "daemon" group. If the "static.user"
-       property is not supplied, war-tomcat skips the static
-       content generation step.
-  -->
-
-  <target name="war-tomcat"      depends="build-tomcat-war,staticzip"
-    description="Builds the WAR file for Tomcat (with pre-compiled JSPs)"/>
-
-  <target name="tomcat-init" depends="init">
-    <!-- Auto-detect whether Tomcat is available -->
-    <property name="war"               value="${code.build}/${ant.project.name}" />
-    <property name="war.tomcat"        value="${ant.project.name}-tomcat.war" />
-    <property name="tar.static"        value="${ant.project.name}-static.tar.gz" />
-    <check-property prop="env.CATALINA_HOME" />
-    <property name="tomcat.home" value="${env.CATALINA_HOME}" />
-    <echo message="Detected Tomcat: ${tomcat.home}" />
-
-    <!-- Set classpath for pre-compilation and deployment tasks -->
-    <path id="tomcat.classpath">
-      <pathelement location="${java.home}/../lib/tools.jar" />
-      <fileset dir="${tomcat.home}">
-        <!-- For Tomcat 5.5 -->
-        <include name="bin/commons-logging-api.jar" />
-        <include name="common/lib/*.jar" />
-        <include name="server/lib/*.jar" />
-        <!-- For Tomcat 6.0 -->
-        <include name="bin/tomcat-juli.jar" />
-        <include name="lib/*.jar" />
-      </fileset>
-    </path>
-  </target>
-
-  <!-- Use Jasper to generate Java class files for the JSPs.
-       Then compile and jar 'em up. Note that Tomcat's
-       Jasper task creates a web.xml "fragment" containing
-       the JSP-to-servlet mappings. We need to copy this into
-       our existing web.xml, which we do using a file
-       copy with token substitution.                       -->
-
-  <target name="compile-tomcat" depends="tomcat-init,opened-war">
-    <mkdir dir="${code.build}/jsp-java" />
-    <mkdir dir="${code.build}/jsp-classes"/>
-    <taskdef classname="org.apache.jasper.JspC" name="jasper2">
-      <classpath>
-        <path refid="tomcat.classpath" />
-        <path refid="path.base" />
-      </classpath>
-    </taskdef>
-    <jasper2
-      validateXml="false"
-      uriroot="${war}"
-      outputDir="${code.build}/jsp-java"
-      poolingEnabled="false"
-      webXmlFragment="${code.build}/web-fragment.xml" />
-    <javac srcdir="${code.build}/jsp-java" destdir="${code.build}/jsp-classes">
-      <classpath>
-        <path refid="tomcat.classpath" />
-        <path id="war.classpath">
-          <fileset dir="${war}/WEB-INF/lib">
-            <include name="*.jar" />
-          </fileset>
-        </path>
-      </classpath>
-    </javac>
-    <jar jarfile="${code.build}/jsp.jar">
-      <fileset dir="${code.build}/jsp-classes" includes="**/*.class" />
-    </jar>
-    <echo message="Adding JSP servlet mappings to web.xml" />
-    <loadfile property="generated-web.xml" srcFile="${code.build}/web-fragment.xml"/>
-    <copy file="${war}/WEB-INF/web.xml" toFile="${code.build}/web-merged.xml" overwrite="true">
-      <filterset begintoken="&lt;!--" endtoken="--&gt;">
-        <filter token=" PLACEHOLDER FOR PRE-COMPILED JSP SERVLETS " value="${generated-web.xml}" />
-      </filterset>
-    </copy>
-  </target>
-
-  <!-- Create a new war file with the new JSP jar and amended web.xml -->
-
-  <target name="build-tomcat-war" depends="compile-tomcat">
-    <war warfile="${code.build}/${war.tomcat}" webxml="${code.build}/web-merged.xml" defaultexcludes="true">
-      <webinf dir="${war}/WEB-INF">
-        <exclude name="web.xml" />
-        <exclude name="lib/*" />
-      </webinf>
-      <lib dir="${war}/WEB-INF/lib" excludes="servlet-api-2.4.jar,j2ee.jar"/>
-      <lib dir="${code.build}" includes="jsp-api-2.0.jar" />
-      <fileset dir="${war}">
-        <exclude name="WEB-INF/**" />
-        <exclude name="**/*.jsp" />
-      </fileset>
-    </war>
-  </target>
-
-  <!-- Create a tarball containing the static content.
-       User must set at least ${static.user} and preferably ${static.group}.
-       If not present, the target is skipped.
-       File permissions are owner and group read (440),
-       and for directories, owner and group read
-       and execute (550). -->
-
-  <target name="staticzip" depends="build-tomcat-war" if="static.user">
-    <property name="static.group" value="${static.user}" />
-    <tar destfile="${code.build}/${tar.static}" longfile="fail" compression="gzip">
-      <tarfileset dir="${war}" defaultexcludes="yes"
-        username="${static.user}" group="${static.group}"
-        mode="440" dirmode="550">
-        <include name="**/*.css" />
-        <include name="**/*.gif" />
-        <include name="**/*.htm" />
-        <include name="**/*.html" />
-        <include name="**/*.jpg" />
-        <include name="**/*.js" />
-        <include name="**/*.png" />
-      </tarfileset>
-    </tar>
-  </target>
-
+  
   <!-- ============================================================== -->
 
   <!-- Targets for signing JAR files -->
